# ccrecall

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: IMPLEMENTATION_STATE.md  plan-claude-code-agent-memory.md
src/: rlm_claude_recall_mcp.py
tests/: conftest.py  test_rlm_claude_recall.py
